--- a/Tareas/Tarea1/yo.html
+++ b/Tareas/Tarea1/yo.html
@@ -7,7 +7,7 @@
     <style>
         .gradient-background {
             width: 100%;
-            height: 100vh; 
+            height: 200vh; 
             background-image: linear-gradient(to bottom, #ffc8da, #f34a2c); 
         }
     </style>
@@ -20,8 +20,8 @@
     <h2> HOLA, SOY</h2> <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">SAMANTHA MIKAELA HINOJOSA YUCRA </h1>
     <P>Soy una estudiante de Ingenieria de Sistemas, estudio en la UNiversidad San Francisco Xavier de Chuquisaca, tengo 19 años, vivo en la ciudad de Sucre </P>
     <div style="justify-content: center;">
-      <img src="yo1.jpg" alt="yo" width="500" height="500">
-
+      <center><img src="imagenes/yo1.jpg" alt="yo" width="500" height="700">
+      </center> 
 <table border="1">
     <ul>
         <li><a href="mifamilia.html">Mi Familia</a></li>
