--- a/Tareas/Tarea4/form_alumnos.html
+++ b/Tareas/Tarea4/form_alumnos.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Carrera</title>
+    <title>Document</title>
 </head>
 <body>
     
     <form action="create.php" method="post">
-        <label for="nombre">Nombre de la Carrera</label>
+        <label for="nombre">Nombre</label>
         <input type="text" name="nombre" id="nombre">
         <br>
-        <input type="submit" value="Agregar Carrera">
+        <label for="apellido">Apellido</label>
+        <input type="text" name="apellido" id="apellido">
+        <br>
+        <label for="edad">Edad</label>
+        <input type="text" name="edad" id="edad">
+        <br>
+        <label for="curso">Curso</label>
+        <input type="text" name="curso" id="curso">
+        <br>
+        <input type="submit" value="Enviar">
     </form>
+
 
 </body>
 </html>
