--- a/Tareas/Tarea4/form_carrera.html
+++ b/Tareas/Tarea4/form_carrera.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Carrera</title>
+    <link rel="stylesheet" href="estilos_carreras.css">
 </head>
 <body>
     
