--- a/Tareas/Tarea4/form_carrera.html
+++ b/Tareas/Tarea4/form_carrera.html
@@ -7,13 +7,10 @@
     <link rel="stylesheet" href="estilos_carreras.css">
 </head>
 <body>
+    <h1>ELIGA LA OPCION QUE DESEA EDITAR</h1>
     
-    <form action="create.php" method="post">
-        <label for="nombre">Nombre de la Carrera</label>
-        <input type="text" name="nombre" id="nombre">
-        <br>
-        <input type="submit" value="Agregar Carrera">
-    </form>
+    <a href="read.php">ALUMNOS</a>
+    <a href="read_carrera.php">CARRERAS</a>
 
 </body>
 </html>
