--- a/Tareas/Tarea4/form_carrera.html
+++ b/Tareas/Tarea4/form_carrera.html
@@ -6,12 +6,14 @@
     <title>Crear Carrera</title>
     <link rel="stylesheet" href="estilos_carreras.css">
 </head>
-<body>
-    <h1>ELIGA LA OPCION QUE DESEA EDITAR</h1>
-    
-    <a href="read.php">ALUMNOS</a>
-    <a href="read_carrera.php">CARRERAS</a>
-
+<body bgcolor="pink">
+    <div class="container">
+        <h1 class="container">ELIGA LA OPCION QUE DESEA EDITAR</h1>
+        <div class="links">
+            <a href="read.php">ALUMNOS</a>
+            <a href="read_carrera.php">CARRERAS</a>
+        </div>
+    </div>
 </body>
 </html>
 
