--- a/Tareas/Tarea4/form_carrera.html
+++ b/Tareas/Tarea4/form_carrera.html
@@ -6,14 +6,16 @@
     <title>Crear Carrera</title>
     <link rel="stylesheet" href="estilos_carreras.css">
 </head>
-<body bgcolor="pink">
-    <div class="container">
-        <h1 class="container">ELIGA LA OPCION QUE DESEA EDITAR</h1>
-        <div class="links">
-            <a href="read.php">ALUMNOS</a>
-            <a href="read_carrera.php">CARRERAS</a>
+<body>
+    <div class="main-container">
+        <div class="item">ELIGA LA OPCION QUE DESEA EDITAR</div>
+    
+        <div class="button-container">
+            <a href="read.php" class="option-button">ALUMNOS</a>
+            <a href="read_carrera.php" class="option-button">CARRERAS</a>
         </div>
     </div>
 </body>
 </html>
+
 
