--- a/Tema5/pregunta3.html
+++ b/Tema5/pregunta3.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <?php include('conexion.php')
-    $iddepartamento
+    <php>
 
-    ?>
-    
+    <?php>
+    include("conexion.php");
 </body>
 </html>
