--- a/2doParcial/forminsertar.html
+++ b/2doParcial/forminsertar.html
@@ -1,4 +1,4 @@
-<form id="form" style="display: flex; flex-direction: column; gap: 10px;">
+<form id="principal" style="display: flex; flex-direction: column; gap: 10px;">
     <label for="titulo">Titulo:</label>
     <input type="text" name="titulo">
     <label for="autor">Autor:</label>
@@ -8,4 +8,5 @@
     <label for="imagen">Imagen:</label>
     <input type="file" name="imagen">
     <button type="button" style="width: 60px;" onclick="insertar()">Insertar</button>
+    <div style="border: 1px black;" class="button"  onclick="cargarContenido('listar.php')">listar</div>
 </form>
