--- a/2doParcial/tabla.html
+++ b/2doParcial/tabla.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <div>
         <label for="numero">Tabla del</label>
-        <input type="number" id="numero">
-        <input type="radio" name="operacion" value="multiplicar"> Multiplicación
-        <input type="radio" name="operacion" value="sumar"> Suma
-        <input type="radio" name="operacion" value="resta"> Resta
-        <input type="radio" name="operacion" value="division"> División
+        <input type="number" id="numero"> <br>
+        <input type="radio" name="operacion" value="factorial"> factorial <br>
+        <input type="radio" name="operacion" value="sumar"> Suma <br>
+        <input type="radio" name="operacion" value="resta"> Resta <br>
+       
         <label for="tope">hasta el</label>
         <input type="number" id="limite">
         <button onclick="generarTabla()">Tabla</button>
@@ -36,15 +36,13 @@
 
             var resultado = '';
             for (var i = 1; i <= limite; i++) {
-                if (operacion === 'multiplicar') {
+                if (operacion === 'factorial') {
                     resultado += numero + ' x ' + i + ' = ' + (numero * i) + '<br>';
                 } else if (operacion === 'sumar') {
                     resultado += numero + ' + ' + i + ' = ' + (numero + i) + '<br>';
                 } else if (operacion === 'resta') {
                     resultado += numero + ' - ' + i + ' = ' + (numero - i) + '<br>';
-                } else if (operacion === 'division') {
-                    resultado += numero + ' / ' + i + ' = ' + (numero / i) + '<br>';
-                }
+                } 
             }
 
             document.getElementById('Resultado').innerHTML = resultado;
